# hauto

./: CHANGELOG.md  Cargo.toml  README.md  hauto.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
contrib/appliance_power_status/: README.md  appliance_power_status.rs  main.rs
docs/proposals/: entity-discovery.md  global-state-predicates.md  public-api-organization.md  sensor-value.md  typed-predicate-waits.md
examples/: global_wait.rs  light_toggle.rs  occupancy_light.rs  publish_status.rs  raw_command.rs  raw_service.rs  temperature_threshold.rs  timer_cancel.rs  watch_entity.rs
examples/appliance_power_status/: README.md  appliance_power_status.rs
examples/bathroom_exhaust_fan/: README.md  bathroom_exhaust_fan.rs  discovery.rs  fan_control.rs  humidity_status.rs  main.rs
src/: app.rs  cache.rs  client.rs  context.rs  discovery.rs  entity.rs  error.rs  lib.rs  rest.rs  services.rs  state.rs  streams.rs  test_support.rs  tests.rs  timer.rs  wait.rs  ws.rs
src/app/: tests.rs
src/cache/: tests.rs
src/client/tests/: mod.rs  rest.rs  websocket.rs
src/context/: tests.rs
src/discovery/tests/: mod.rs  protocol.rs
src/entity/: tests.rs
src/rest/: tests.rs
src/services/: tests.rs
src/state/: tests.rs
src/streams/: tests.rs
src/timer/: tests.rs
src/wait/: tests.rs
tests/: public_api.rs
